# imaradesk-os

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  check_db.py  dev.sh  pyproject.toml  requirements.txt  setup.py  start.sh  supervisord.conf
config/: celery.py  settings.py  urls.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/app/Pages/: AddSLAPolicy.jsx  AddTask.jsx  AddTicket.jsx  Channels.jsx  CustomerPortalHome.jsx  CustomerPortalKBList.jsx  CustomerPortalSurveys.jsx  CustomerPortalTicketDetail.jsx  EmailProviderSetup.jsx  EmailsTemplates.jsx  Index.jsx  KBApprovals.jsx  KBArticleForm.jsx  KBArticleView.jsx  KBArticles.jsx  KBCategoryForm.jsx  KBSettings.jsx  KnowledgeBase.jsx  People.jsx  PortalCreateTicket.jsx  PortalKBArticle.jsx  PortalKBSearch.jsx  PortalTicketView.jsx  PortalTrackTicket.jsx  QuickStart.jsx  Reports.jsx  TaskView.jsx  Tasks.jsx  TeamUsers.jsx  TicketView.jsx  Tickets.jsx
frontend/src/app/components/: ArticleCard.jsx  KBSidebar.jsx  LucideIcon.jsx  (+3 more)
frontend/src/components/: ActivityTimeline.jsx  DataTable.jsx  MentionTextarea.jsx  NoDataFound.jsx  Popover.jsx
frontend/src/utils/: axios.js
modules/core/: views.py
modules/crons/: tasks.py
modules/customer_portal/: urls.py  views.py
modules/customer_portal/migrations/: 0001_initial.py
modules/email_to_ticket/: __init__.py  admin.py  models.py  tasks.py  utils.py
modules/email_to_ticket/migrations/: 0001_initial.py
modules/kb/: models.py  urls.py  views.py
modules/kb/migrations/: 0001_initial.py
modules/onboarding/: apps.py  models.py  urls.py  views.py
modules/onboarding/migrations/: 0001_initial.py
modules/settings/: email_templates_defaults.py  models.py  urls.py  views.py
modules/settings/migrations/: 0001_initial.py  0002_add_kb_sla_notification_fields.py
modules/sla/migrations/: 0001_initial.py
modules/tasks/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
modules/tasks/migrations/: 0001_initial.py
modules/ticket/: admin.py  apps.py  models.py  signals.py  tasks.py
modules/ticket/migrations/: 0001_initial.py
modules/tickets/: urls.py  views.py
modules/users/migrations/: 0001_initial.py
shared/management/commands/: coredesk.py
shared/middlewares/: OnboardingMiddleware.py
shared/migrations/: 0001_initial.py
shared/utilities/enums/: channels.py
(+12 files in other folders)
